# services/plan.js
@@ -1,5 +1,7 @@
 const R = require("ramda");
 const planModel = require("../models/plan");
+const serviceModel = require("../models/service");
+const db = require("../db");
 
 const getAllPlansWithServices = async () => {
   const plans = await planModel.findAllWithServices();
@@ -11,4 +13,27 @@ const getAllPlansWithServices = async () => {
   });
 };
 
-module.exports = { getAllPlansWithServices };
+const createNewPlan = async (name, price, serviceIds) => {
+  const connection = await db.getConnection();
+
+  await connection.beginTransaction();
+
+  try {
+    const result = await planModel.createNewPlan(name, price, connection);
+    const planId = result.insertId;
+
+    for (const serviceId of serviceIds) {
+      await serviceModel.createPlanService(planId, serviceId, connection);
+    }
+    await connection.commit();
+    await connection.release();
+  } catch (e) {
+    await connection.rollback();
+    await connection.release();
+    throw e;
+  }
+
+  return true;
+};
+
+module.exports = { getAllPlansWithServices, createNewPlan };
